--- a/libft/MAKEFILE
+++ b/libft/MAKEFILE
@@ -1,43 +1,38 @@
 NAME = libft.a
-SRCS = ${wildcard ft_*.c}
-# SRCS = ${find . -type f -name *.c}
+SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
+       ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c \
+       ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c \
+       ft_calloc.c ft_strdup.c ft_toupper.c ft_tolower.c \
+       ft_strchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c \
+       ft_strnstr.c ft_atoi.c ft_strrchr.c ft_substr.c \
+       ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
+       ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
+       ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+OBJS = ft_isalpha.o ft_isdigit.o ft_isalnum.o ft_isascii.o \
+       ft_isprint.o ft_strlen.o ft_memset.o ft_bzero.o \
+       ft_memcpy.o ft_memmove.o ft_strlcpy.o ft_strlcat.o \
+       ft_calloc.o ft_strdup.o ft_toupper.o ft_tolower.o \
+       ft_strchr.o ft_strncmp.o ft_memchr.o ft_memcmp.o \
+       ft_strnstr.o ft_atoi.o ft_strrchr.o ft_substr.o \
+       ft_strjoin.o ft_strtrim.o ft_split.o ft_itoa.o \
+       ft_strmapi.o ft_striteri.o ft_putchar_fd.o \
+       ft_putstr_fd.o ft_putendl_fd.o ft_putnbr_fd.o
+CFLAGS = -Wall -Wextra -Werror -c
 
-# SRCS = Get-ChildItem -Recurse -File -Filter "*.c"
-# SRCS = ${shell Get-ChildItem -Recurse -File -Filter "*.c"}
-# SRCS = $(shell powershell -Command "Get-ChildItem -Recurse -File -Filter *.c | ForEach-Object { $_.FullName }")
-OBJS = ${SRCS:.c=.o}
-# OBJS = $(patsubst %.c,%.o,$(SRCS))
-COMP = gcc -c -Wall -Wextra -Werror
+cc:
+	cc ${CFLAGS} ${SRCS}
 
-all: ${NAME}
-	@echo DONE.
+all: $(NAME)
 
-
-${NAME}: compile
-	@echo Archiving...
-	@ar rcs ${NAME} ${OBJS}
-
-compile: ${SRCS}
-	@echo Compiling...
-	@${COMP} ${SRCS}
+$(NAME):
+	ar rcs ${NAME} ${OBJS}
 
 clean:
-	@echo Cleaning ".o" files...
-	@del /q ${OBJS} 2>nul
+	rm -f ${OBJS}
 
 fclean: clean
-	@echo deleting archive...
-	@del /q ${NAME} 2>nul
+	rm -f ${name}
 
 re: fclean all
 
-run: fclean ${NAME}
-	@echo Cleaning up...
-	@make clean 2>&1 >nul
-	@echo finito O7
-
-sayhello: sayhi
-	@echo "hello"2
-
-sayhi:
-	@echo hi
+.PHONY: all clean fclean re cc do 
